# api-worker-celery

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: worker.py
