[tool.poetry]
name = "api-worker-celery"
version = "0.1.0"
description = "FastAPI with Celery using Docker"
authors = ["Jackson Pacheco <jackpa.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
celery = "^5.1.2"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"